syntax = "proto3";

package api;

option go_package = "internal/api";

service AuthService {
    rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse) {}
}

message VerifyTokenRequest {
    string token = 1;
    string token_type = 2;
}

message VerifyTokenResponse {
    bool is_valid = 1;
    string user_id = 2;
    string email = 3;
}
